--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.3.0",
-    "turbolinks": "^5.2.0"
+    "@rails/webpacker": "5.4.2",
+    "axios": "^0.21.1",
+    "turbolinks": "^5.2.0",
+    "vue": "^2.6.14",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.11.2"
+    "json-loader": "^0.5.7",
+    "webpack-dev-server": "^4.0.0"
   }
 }
