CIファイルでbundleをインストールできるようにした

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ jobs:
     executor: ruby/default
     steps:
       - checkout
+      - run: bundle update --bundler
+      - run: gem install bundler:2.2.15
       - run:
           name: test
           command: bundle exec rspec
